clang/test/Lexer/invalid-directive.cpp
// RUN: %clang_cc1 -fsyntax-only -verify -std=c++20 %s

#module // expected-error {{invalid preprocessing directive}}
